--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -20,3 +20,8 @@ button {
 .buttonsContainer__blue-button {
     background-color: blue;
 }
+
+.buttonsContainer--button-pressed {
+    box-shadow: 0 0 20px white;
+    background-color: grey;
+}
